--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-hook-form": "^7.43.9",
+    "react-intersection-observer": "^9.4.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.0.1"
   },
   "scripts": {
