--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "styled-components": "^5.0.1"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
-    "build": "react-scripts --openssl-legacy-provider build",
+    // "start": "react-scripts --openssl-legacy-provider start",
+    // "build": "react-scripts --openssl-legacy-provider build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
