--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^1.3.4",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^5.3.0-alpha3",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-hook-form": "^7.43.9",
