--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^16.14.0",
     "react-dom": "^16.13.0",
     "react-hook-form": "^7.43.9",
+    "react-lazy-load-image-component": "^1.5.6",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.11.1",
     "react-scripts": "3.4.0",
